name:                elm-glsl
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            GLSL abstract syntax tree, parser, and pretty-printer
description:
  The package elm-glsl is a Haskell library for the
  the parsing of GLSL 1.50 code for the Elm compiler.

category:            Language, Graphics
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

extra-source-files:  glsl/sample-01.glsl

source-repository head
  type: git
  location: https://bitbucket.com/unsoundscapes/elm-glsl

library
  build-depends:       base < 5,
                       elm-compiler == 0.19.0,
                       parsec,
                       prettyclass,
                       text >= 1 && < 2
  ghc-options:         -Wall
  exposed-modules:     Language.GLSL,
                       Language.GLSL.Parser,
                       Language.GLSL.NewParser,
                       Language.GLSL.Pretty,
                       Language.GLSL.Primitives,
                       Language.GLSL.Syntax

Test-Suite tests
  Type:            exitcode-stdio-1.0
  build-depends:   base < 5,
                   containers >= 0.5.8.2 && < 0.6,
                   HUnit,
                   elm-glsl,
                   elm-compiler == 0.19.0,
                   parsec,
                   prettyclass,
                   test-framework,
                   test-framework-hunit,
                   text >= 1 && < 2
  ghc-options:     -Wall
  Hs-Source-Dirs:  tests
  main-is:         Main.hs
  other-modules:   Tests
                   NewTests
